--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    
 }
 
 .title-page {
@@ -9,31 +10,51 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 50vh;
+    height: 200vh;
 }
 
 .fallhard {
     font-family: 'Bebas Neue', cursive;
-    font-size: 100px;
+    font-size: 60px;
     color: red;
+    margin: 10px;
+    padding: 10px;
+
+}
+
+#navigation {
+    background-color: black;
+    height: 100px;
+    
 }
 
 
-li {
-    float: right;
-    font-family: 'Bebas Neue', cursive;
-}
-
-a {
+.topnav a {
     display: inline-block;
     padding: 5px;
+    color: whitesmoke;
+    text-decoration: none;
+    font-size: 35px;
+    font-family: 'Bebas Neue', cursive;
+    float: right;
+    margin: 5px;
+    padding: 5px;
+}
+
+.socialnav i {
+    font-size: 2rem;
     color: red;
+    margin-top: 50px;
+    padding: 5px;
+    float: right;
 }
 
 p {
-    float: left;
-    width: 250px;
+    width: 500px;
     font-size: 25px;
-    color: red;
-    margin: 20px;
+    color: whitesmoke;
+    margin-top: 300px;
+    margin-left: 20px;
+    font-family: 'Bebas Neue', cursive;
+
 }
